src/objects/PSA_Office__c.object
<CustomObject>
    <fields>
        <fullName>Capacity_PSA_Email__c</fullName>
        <label>Capacity PSA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Capacity_PSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capacity PSA</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>PSA Office</relationshipLabel>
        <relationshipName>PSA_Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <label>Cash</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
     <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry_PSA_Email__c</fullName>
        <label>Enquiry PSA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry_PSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry PSA</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>PSA Office  (Enquiry PSA)</relationshipLabel>
        <relationshipName>PSA_Office1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_OfficeKey__c</fullName>
        <label>PSA OfficeKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <externalId>true</externalId>
        <label>Reference</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>PSA Office</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>